<resources>
    <string name="app_name">CameraXDemo</string>
    <string name="preview_area">Preview Area</string>
    <string name="capture">Capture</string>
    <string name="this_is_a_camerax_test_app">This is a CameraX test app!</string>
    <string name="open_camera">Open Camera</string>
    <string name="open_sound_recorder">Open Sound Recorder</string>
    <string name="start_record">Start record</string>
    <string name="stop_record">Stop record</string>
    <string name="start_read">Start read</string>
    <string name="stop_read">Stop read</string>
    <string name="path_for_images">/Pictures/MyApp/Images/</string>
    <string name="path_for_previews">/Pictures/MyApp/Previews/</string>
    <string name="path_for_sounds">/Pictures/MyApp/Sounds/</string>

    <string name="title">Audio Recorder!</string>
    <string name="recorder">Recorder</string>
    <string name="recorder_page">Recorder Page</string>
    <string name="record">record</string>
    <string name="stop">stop</string>
    <string name="action_settings">Settings</string>
    <string name="sound_recorder">Sound Recorder</string>
    <string name="pause">Pause</string>
    <string name="start">Start</string>
    <string name="resume">Resume</string>
    <string name="content_description_media">Description</string>
    <string name="secondary_text">Secondary_Long_Description</string>
    <string name="supporting_text">Other Description</string>
    <string name="action_1">Action1</string>
    <string name="action_2">Action2</string>
    <string name="search">Search</string>
    <string name="content_description_search">Search</string>
    <string name="home">Home</string>
    <string name="content_description_home">Home</string>

    <string name="fixedAspectRatio">fixedAspectRatio =\u0020</string>
    <string name="aspectRatioXHeader">aspectRatioX =\u0020</string>
    <string name="aspectRatioYHeader">aspectRatioY =\u0020</string>
    <string name="showGuidelines">showGuidelines =\u0020</string>
    <string name="crop">Crop</string>
    <string name="croppedImageDesc">The cropped image.</string>
    <string name="label">Добавить подпись…</string>
    <string name="add_new_publication">Add new publication</string>

    <string-array name="showGuidelinesArray">
        <item>Off</item>
        <item>On Touch</item>
        <item>On</item>
    </string-array>
</resources>
