<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:id="@+id/container"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:text="@string/this_is_a_camerax_test_app"
            android:gravity="center">
        </TextView>

        <Button
            android:id="@+id/enableCamera"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:gravity="center"
            android:text="@string/open_camera" />

        <Button
            android:id="@+id/enableSoundRecorder"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:gravity="center"
            android:text="@string/open_sound_recorder" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>